# lesson_29HW

./: docker-compose.yaml  pyproject.toml  pytest.ini
ads/: admin.py  models.py  serializers.py  validators.py  views.py  views_users.py
ads/migrations/: 0001_initial.py  0002_location.py  0003_alter_location_name_user.py  0004_ads_category_id_ads_image.py  0005_remove_ads_author_ads_author_id.py  0006_alter_ads_image.py  0007_remove_ads_address.py  0008_alter_ads_options_alter_ads_image.py  0009_alter_user_options.py  0010_alter_ads_options.py  0011_alter_user_options.py
ads/permissions/: ad.py  selection.py
ads/urls/: ad.py  cats.py  location.py  selection.py  users.py
data/: ads.json  bird.jfif
dj_project/: converter.py  settings.py  urls.py
my_media_directory/images/: post_21.jfif
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_list_test.py  create_test.py
