[tool.poetry]
name = "lesson-28-hw"
version = "0.1.0"
description = ""
authors = ["a-abdulin <abdulin@list.ru>"]
readme = "README.md"
packages = [{include = "lesson_28_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
