[tool.poetry]
name = "lesson-29"
version = "0.1.0"
description = ""
authors = ["a-abdulin <abdulin@list.ru>"]
readme = "README.md"
packages = [{include = "lesson_29"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework-simplejwt = "^5.2.2"
python-dateutil = "^2.8.2"
pytest = "^7.2.2"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
